do not use an index to access a linked list
Signed-off-by: Florian Thienel <florian@thienel.org>